--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,7 +3,7 @@ copy.src.on.open=false
 copy.src.target=
 index.file=
 remote.connection=Sle__HostEurope_-a278cc
-remote.directory=/typo/typo3conf/ext/extensionusagefinder
-remote.upload=MANUALLY
+remote.directory=/typo3/typo3conf/ext/extensionusagefinder
+remote.upload=ON_SAVE
 run.as=REMOTE
 url=http://localhost/extensionusagefinder/
