[Task] Fix dependency to TYPO3 Core version 9.5.*

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require": {
     "php": ">=7.0",
-    "typo3/cms": "9.5.*",
+    "typo3/cms-core": "9.5.*",
     "typo3/cms-extbase": "9.5.*",
     "typo3/cms-fluid": "9.5.*"
   },
